--- a/css/style.css
+++ b/css/style.css
@@ -91,6 +91,66 @@ header{
     font-size: 18px;
     letter-spacing: 15px;
 }
+/*===== Booking Form Section =====*/
+/* Hotel CSS */
+.hotel .form-group {
+  padding: 0 30px;
+  border: 1px solid #f5f5f5;
+}
+
+.hotel .form-group .fa {
+  color: #4db748;
+}
+
+.hotel .form-group label {
+  display: inline-block;
+  padding: 10px;
+  text-align: center;
+  color: #4db748;
+}
+
+.hotel .form-control {
+  padding: 0;
+  margin-top: 14px;
+  font-size: 2rem;
+  border: none;
+  font-size: 21px;
+  font-family: 'Open Sans', sans-serif;
+  font-weight: bold;
+}
+
+.hotel .form-control:focus {
+  box-shadow: none;
+}
+
+.hotel .form-select {
+  font-family: 'Open Sans', sans-serif;
+  font-size: 21px;
+  font-weight: bold;
+  border: none;
+  text-align: center;
+}
+
+.hotel .input-group .btn {
+  position: relative;
+  z-index: 2;
+  margin-top: 28px;
+  background: #70e73b;
+  transition: 0.5s ease-in-out;
+  font-size: 16px;
+  font-family: 'Open Sans', sans-serif;
+  margin-left: -7px;
+  border: 1px solid #f5f5f5;
+  padding: 10px;
+  color: #fff;
+  font-weight: 600;
+}
+
+.hotel .input-group .btn:hover {
+  background: #4db748;
+  color: #fff;
+  cursor: pointer;
+}
 /*===== Booking Section =====*/
 .booking-section{
     background: #ffc61a;
