--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,12 @@
 /*===== Bebas Neue & Lato Font File =====*/
 @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Lato:wght@100;300;400;700;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@100;300;400;700;900&display=swap');
+*{
+	margin: 0;
+}
+body{
+	font-family: 'Lato', sans-serif;
+}
 
 /*===== Global CSS =====*/
 *{
@@ -1131,4 +1138,123 @@ footer{
     .newsOne .newsTwo { margin-bottom: 40px; }
     .latestNews ul { display: inline-flex; }
     .latestNews h3 { font-size: 20px; }
+}
+
+
+/* Contact Us Section */
+/* Background */
+.contact-bg{
+    background-image: url("../img/contact_background.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    position: relative;
+	padding: 75px 0 150px;
+    z-index: 1;
+}
+.contact-bg::after{
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgba(112, 231, 59, 0.25);
+    z-index: -1;
+}
+.contact-head h2{
+    color: #fff;
+    text-align: center;
+    font-size: 36px;
+    font-weight: bold;
+    text-shadow: 2px 2px 2px #70e73b;
+}
+.contact-head p{
+    color: #fff;
+    text-align: center;
+    font-size: 16px;
+    font-weight: 400;
+    padding-bottom: 15px;
+    text-shadow: 1px 1px 1px #505050;
+}
+
+/* Contact Form Area */
+.contact-box{
+    background:rgb(255, 255, 255, 0.65);
+    border-radius: 10px;
+}
+/* Left Side of Contact Box */
+.contact-box-image{
+    background-image: url("../img/contact_sidebox.jpg");
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    border-radius: 10px 0 0 10px;
+    padding: 35px 10px 35px 20px;
+}
+.contact-box-image h2{
+    color: #fff;
+    font-size: 20px;
+    font-weight: bold;
+    text-shadow: 1px 1px 1px #505050;
+}
+.contact-box-image p{
+    color: #fff;
+    font-size: 12px;
+    text-shadow: 1px 1px 1px #505050;
+}
+.contact-info{
+    padding-top: 10px;
+}
+.contact-info .fa{
+   color: #70e73b;
+}
+.contact-info p{
+    line-height: 23px;
+ }
+
+ /* Right Side of Contact Box (Form Area) */
+
+.contact-from-area{
+    padding: 35px 10px;
+}
+.form-control{
+    margin-top: 10px;
+    border-radius: 0;
+    background-color: rgb(255, 255, 255, 0);
+    border: none;
+    border-bottom: 2px solid rgb(68, 68, 68);
+    color: #000000;
+    text-shadow: 0px 0px 1px #ffffff;
+}
+.form-control:focus{
+    box-shadow: none;
+    border: none;
+    border-bottom: 2px solid #70e73b;
+    background-color: rgb(255, 255, 255, 0.0);
+}
+.radio-btn{
+    padding-top: 20px;
+}
+.radio-btn p{
+    text-align: center;
+    font-size: 14px;
+    text-shadow: 0px 0px .5px #505050;
+}
+.radio-lebel{
+    font-size: 12px;
+}
+.send-msg-button{
+    text-align: right;
+}
+.btn-primary{
+    margin-top: 15px;
+    background-color: #70e73b;
+    border-color: #74e643;
+    text-shadow: 0px 0px 1px #505050;
+}
+.btn-primary:hover{
+    background-color: rgb(255, 255, 255, 0);
+    color: #74e643;
+    border-color: #74e643;
 }
